@@ -98,6 +98,9 @@
       <id>printer/Canon-imageRunner_C5185i</id>
     </printer>
     <printer>
+      <id>printer/Dell-3000cn</id>
+    </printer>
+    <printer>
       <id>printer/Dell-3100cn</id>
     </printer>
     <printer>
