@@ -168,6 +168,9 @@
           <make>Canon</make>
         </constraint>
         <constraint sense="false">
+          <make>Dell</make>
+        </constraint>
+        <constraint sense="false">
           <make>Epson</make>
         </constraint>
         <constraint sense="false">
