@@ -1,0 +1,39 @@
+<printer id="printer/Dell-3000cn">
+  <make>Dell</make>
+  <model>3000cn</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <pcl level="6" />
+    <pjl />
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+      <description>Dell Laser Printer 3000cn</description>
+      <manufacturer>Dell</manufacturer>
+      <model>Laser Printer 3000cn</model>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>pxlcolor</driver>
+  <drivers>
+    <driver>
+      <id>pxlcolor</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+    </en>
+  </comments>
+</printer>
