@@ -1,3 +1,10 @@
+2011-07-03  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Dell-3000cn.xml, driver/pxlcolor.xml,
+	  opt/pxlmono-PrinterResolution.xml: AAdded new printer Dell 3000cn.
+	  working with the "pxlcolor" driver. Thanks to Albert Pool
+	  (albertpool at solcon dot nl).
+
 2011-06-30  Lovely Kim Salvo-Nunez <lsalvo@lexmark.com>
 
         * PPD/Lexmark/Lexmark_6500e_Series.ppd,
